[package]
name = "libcef-sys"
version = "0.1.0"
edition = "2021"

links = "cef"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
rpath = true
[profile.release]
rpath = true

[build-dependencies]
bindgen = "0.59.2"
pkg-config = "0.3.25"
regex = "1.5.5"